--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,7 +6,7 @@
     background-color: white;
 }
 body{
-    background-image: url('./images/pattern-background-mobile.svg');
+    background-image: url('../images/pattern-background-mobile.svg');
     background-repeat: no-repeat;
     background-position: top;
     background-attachment: fixed;
@@ -19,7 +19,7 @@ body{
 }
 .logo{
     background-color: white;
-    background-image: url('./images/illustration-hero.svg');
+    background-image: url('../images/illustration-hero.svg');
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -76,7 +76,7 @@ body{
     position: relative;
     display: grid;
     background-color: hsl(225, 100%, 98%);
-    background-image: url('./images/icon-music.svg');
+    background-image: url('../images/icon-music.svg');
     background-repeat: no-repeat;
     background-position-y:60%;
     background-position-x: 3%;
